NetBSD Problem Report #40046

From martin@aprisoft.de  Thu Nov 27 14:06:11 2008
Return-Path: <martin@aprisoft.de>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by narn.NetBSD.org (Postfix) with ESMTP id 3FBF563BD2D
	for <gnats-bugs@gnats.NetBSD.org>; Thu, 27 Nov 2008 14:06:11 +0000 (UTC)
Message-Id: <20081127124853.56A82AF580E@emmas.aprisoft.de>
Date: Thu, 27 Nov 2008 13:48:53 +0100 (CET)
From: martin@duskware.de
Reply-To: martin@duskware.de
To: gnats-bugs@gnats.NetBSD.org
Subject: xorg fonts vs. locales
X-Send-Pr-Version: 3.95

>Number:         40046
>Category:       xsrc
>Synopsis:       xorg fonts vs. locales
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    xsrc-manager
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Nov 27 14:10:01 +0000 2008
>Closed-Date:    Fri Nov 28 22:52:03 +0000 2008
>Last-Modified:  Sat Nov 29 20:55:06 +0000 2008
>Originator:     Martin Husemann
>Release:        NetBSD 5.99.3
>Organization:
The NetBSD Foundation, Inc.
>Environment:
System: NetBSD nelly.aprisoft.de 5.99.3 NetBSD 5.99.3 (NELLY) #0: Wed Nov 26 17:49:34 CET 2008 martin@emmas.aprisoft.de:/nelly/usr/src/sys/arch/sparc64/compile/NELLY sparc64
Architecture: sparc64
Machine: sparc64
>Description:

I have a brand new in-tree xorg setup from last night. I extracted xetc.tgz
and ran fc-cache -r. Many things work, but pkgsrc/wm/qvwm does not:

It seems to do a call like:

  fsDefault = XCreateFontSet(display, DEFAULT_FONT, &miss, &nMiss, &def);

where DEFAULT_FONT is -*-*-medium-r-normal-*-14-*-*-*-*-*-*-* and this
causes libX to say:

Warning: locale not supported by Xlib, locale set to C
Warning: X locale modifiers not supported, using default
Warning: Unable to load any usable fontset

and return a NULL fontset (while xfontsel says 324 names would match, and
fc-list finds 74 hits).

I have no LC_*, LANG or whatever related env settings. Setting LC_ALL to a
valid locale (like de_DE.ISO8859-15) does not help.

>How-To-Repeat:

Build pkgsrc/wm/qvwm and try to run it with in-tree xorg.

>Fix:
n/a

>Release-Note:

>Audit-Trail:
From: matthew green <mrg@eterna.com.au>
To: gnats-bugs@NetBSD.org
Cc: xsrc-manager@netbsd.org, gnats-admin@netbsd.org,
    netbsd-bugs@netbsd.org
Subject: re: xsrc/40046: xorg fonts vs. locales 
Date: Fri, 28 Nov 2008 05:43:28 +1100

 do you have an old /etc/fonts/fonts.conf?

 i had problems with "newer" apps until i fixed the X11R6 path
 in this file.


 .mrg.

From: Martin Husemann <martin@duskware.de>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: xsrc/40046: xorg fonts vs. locales
Date: Thu, 27 Nov 2008 19:57:15 +0100

 On Thu, Nov 27, 2008 at 06:45:02PM +0000, matthew green wrote:
 >  do you have an old /etc/fonts/fonts.conf?

 No, brand new from xetc.tgz.

 Martin

From: Martin Husemann <martin@duskware.de>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: xsrc/40046: xorg fonts vs. locales
Date: Fri, 28 Nov 2008 11:35:12 +0100

 I can not reproduce this problem on an amd64 machine with similar (brand
 new) in-tree Xorg setup - I'll investigate.

 Martin

From: Martin Husemann <martin@duskware.de>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: xsrc/40046: xorg fonts vs. locales
Date: Fri, 28 Nov 2008 23:40:21 +0100

 On sparc64 machines some bogus ifdef selects _XlcDynamicLoad as method of
 choice to get locale information - which seems to be pretty Solaris specific.
 (USE_DYNAMIC_LC instead of USE_GENERIC_LOADER or USE_DEFAULT_LOADER)

 Martin

From: Martin Husemann <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/40046 CVS commit: xsrc/external/mit/libX11/dist/src/xlibi18n
Date: Fri, 28 Nov 2008 22:46:32 +0000 (UTC)

 Module Name:	xsrc
 Committed By:	martin
 Date:		Fri Nov 28 22:46:32 UTC 2008

 Modified Files:
 	xsrc/external/mit/libX11/dist/src/xlibi18n: XlcDL.c

 Log Message:
 Do not special case locale names for sparc _LP64 machines - this probably
 is a Solaris'm not needed on NetBSD. Fixes PR xsrc/40046.


 To generate a diff of this commit:
 cvs rdiff -r1.1.1.1 -r1.2 xsrc/external/mit/libX11/dist/src/xlibi18n/XlcDL.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: martin@NetBSD.org
State-Changed-When: Fri, 28 Nov 2008 22:52:03 +0000
State-Changed-Why:
I fixed it


From: Manuel Bouyer <bouyer@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/40046 CVS commit: [netbsd-5] xsrc/external/mit/libX11/dist/src/xlibi18n
Date: Sat, 29 Nov 2008 20:53:56 +0000 (UTC)

 Module Name:	xsrc
 Committed By:	bouyer
 Date:		Sat Nov 29 20:53:56 UTC 2008

 Modified Files:
 	xsrc/external/mit/libX11/dist/src/xlibi18n [netbsd-5]: XlcDL.c

 Log Message:
 Pull up following revision(s) (requested by martin in ticket #142):
 	external/mit/libX11/dist/src/xlibi18n/XlcDL.c: revision 1.2
 Do not special case locale names for sparc _LP64 machines - this probably
 is a Solaris'm not needed on NetBSD. Fixes PR xsrc/40046.


 To generate a diff of this commit:
 cvs rdiff -r1.1.1.1 -r1.1.1.1.2.1 \
     xsrc/external/mit/libX11/dist/src/xlibi18n/XlcDL.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.