Do not special case locale names for sparc _LP64 machines - this probably is a Solaris'm not needed on NetBSD. Fixes PR xsrc/40046.